<resources>
    <string name="app_name">ffxieq</string>
    <string-array name="Races">
        <item>Hum</item>
        <item>Elv</item>
        <item>Tar</item>
        <item>Mit</item>
        <item>Gal</item>
    </string-array>
    <string-array name="Jobs">
        <item>WAR</item>
        <item>MNK</item>
        <item>WHM</item>
        <item>BLM</item>
        <item>RDM</item>
        <item>THF</item>
        <item>PLD</item>
        <item>DRK</item>
        <item>BST</item>
        <item>BRD</item>
        <item>RNG</item>
        <item>SAM</item>
        <item>NIN</item>
        <item>DRG</item>
        <item>SMN</item>
        <item>BLU</item>
        <item>COR</item>
        <item>PUP</item>
        <item>DNC</item>
        <item>SCH</item>
        <item>RUN</item>
        <item>GEO</item>
    </string-array>
    <string-array name="Parts">
		<item>Main</item>
		<item>Sub</item>
		<item>Head</item>
		<item>Body</item>
		<item>Hands</item>
		<item>Legs</item>
		<item>Feet</item>
		<item>Back</item>
		<item>Neck</item>
		<item>Waist</item>
		<item>Ring1</item>
		<item>Ring2</item>
		<item>Ear1</item>
		<item>Ear2</item>
		<item>Range</item>
		<item>Anmo</item>
    </string-array>
    <string-array name="Merits_HPMP_Entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="Merits_Skill_Entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="Merits_Skill2_Entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Merits_Status_Entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="Merits_Other_Entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="Merits_Enmity_Entries">
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="Merits_JobSpecific_Entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="NewCharacterName">NewCharacter 1.</string>
    <string name="Save">Save…</string>
    <string name="InAbyssea">Abyssea</string>
    <string name="Merits">Merits…</string>
    <string name="Accuracy">Acc</string>
    <string name="Attack">Atk</string>
    <string name="RangeAccuracy">R.Acc</string>
    <string name="RangeAttack">R.Atk</string>
    <string name="HasteByEquipment">Haste(gear)</string>
    <string name="Haste">Haste</string>
    <string name="SubtleBlow">S Blow</string>
    <string name="StoreTP">STP</string>
    <string name="Evasion">Eva</string>
    <string name="DoubleAttack">D Atk</string>
    <string name="TrippleAttack">T Atk</string>
    <string name="QuadAttack">Q Atk</string>
    <string name="SaveOK">Save</string>
    <string name="QuerySaveCharacterTitle">Save character data</string>
    <string name="SaveNew">Save as another data</string>
    <string name="CharacterSelectorDropDownTitle">Select character</string>
    <string name="QueryDeleteCharacter">Are you sure to delete this data?</string>
    <string name="DeleteOK">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="QueryDeleteCharacterTitle">Delete character deta</string>
    <string name="QueryDiscardChangesTitle">Discard changed data</string>
    <string name="QueryDiscardChanges">Are you sure to discard changes?</string>
    <string name="DiscardOK">Discard</string>
    <string name="QueryLoadCharacterTitle">Load character data</string>
    <string name="QueryLoadCharacter">Modified data will be discarded.  Are you sure to load data?</string>
    <string name="DiscardAndLoad">Discard and Load</string>
    <string name="SaveAndLoad">Save and Load</string>
    <string name="QueryNewCharacterTitle">New Character</string>
    <string name="QueryNewCharacter">Modified data will be discarded.  Are you sure to create new character?</string>
    <string name="SaveAndNewCharacterOK">Save and Create</string>
    <string name="DiscardAndNewCharacterOK">Discard and Create</string>
    <string name="InstallDBSucceeded">Database successfully updated.</string>
    <string name="InstallDBFailed">Database update failed.</string>
    <string name="OK">OK</string>
    <string name="Yes">Yes</string>
    <string name="EditFilterTitle">Filter strings</string>
    <string-array name="AbyssiteOfFurtheranceEntries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="AbyssiteOfMeritEntries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="AbyssiteOfFurtherancePrompt">A.Furtherance</string>
    <string name="AbyssiteOfMeritPrompt">A.Merit</string>
    <string name="CriticalRate">Crit rate</string>
    <string name="CriticalDamage">Crit dmg</string>
    <string name="Remove">Remove</string>
    <string name="RemoveAll">Remove all</string>
    <string name="AccuracySub">Sub Acc</string>
    <string name="AttackSub">Sub Atk</string>
    <string name="Enmity">Enmity</string>
    <string name="AccuracyMagic">Magic Acc</string>
    <string name="AttackMagic">Magic Atk</string>
    <string name="D">DMG</string>
    <string name="DSub">Sub DMG</string>
    <string name="DRange">Range DMG</string>
    <string name="Delay">Delay</string>
    <string name="DelaySub">Sub Delay</string>
    <string name="DelayRange">Range Delay</string>
    <string name="RegistFire">Fire</string>
    <string name="RegistIce">Ice</string>
    <string name="RegistWind">Air</string>
    <string name="RegistEarth">Earth</string>
    <string name="RegistLightning">Thunder</string>
    <string name="RegistWater">Water</string>
    <string name="RegistLight">Light</string>
    <string name="RegistDark">Dark</string>
    <string name="Defence">DEF</string>
    <string name="DefenceMagic">Magic DEF</string>
    <string name="DamageCutPhysical">Phy DMG-</string>
    <string name="DamageCutMagic">Magic DMG-</string>
    <string name="DamageCutBreath">Breath DMG-</string>
    <string name="TP">TP</string>
    <string name="TPRange">Range TP</string>
    <string name="HP">HP</string>
    <string name="MP">MP</string>
    <string name="STR">STR</string>
    <string name="DEX">DEX</string>
    <string name="VIT">VIT</string>
    <string name="AGI">AGI</string>
    <string name="INT">INT</string>
    <string name="MND">MND</string>
    <string name="CHR">CHR</string>
	<string name="HANDTOHAND">Hand-To-Hand</string>
	<string name="DAGGER">Dagger</string>
	<string name="SWORD">Sword</string>
	<string name="GREATSWORD">Great Sword</string>
	<string name="AXE">Axe</string>
	<string name="GREATAXE">Great Axe</string>
	<string name="SCYTH">Scyth</string>
	<string name="POLEARM">Polearm</string>
	<string name="KATANA">Kanata</string>
	<string name="GREATKATANA">Great Katana</string>
	<string name="CLUB">Club</string>
	<string name="STAFF">Staff</string>
	<string name="ARCHERY">Archery</string>
	<string name="MARKSMANSHIP">Marksmanship</string>
	<string name="THROWING">Throwing</string>
	<string name="DIVINEMAGIC">Divine</string>
	<string name="HEALINGMAGIC">Healing</string>
	<string name="ENCHANCINGMAGIC">Enchancing</string>
	<string name="ENFEEBLINGMAGIC">Enfeebling</string>
	<string name="ELEMENTALMAGIC">Elemental</string>
	<string name="DARKMAGIC">Dark</string>
	<string name="SINGING">Singing</string>
	<string name="STRINGINSTRUMENT">String Instrument</string>
	<string name="WINDINSTRUMENT">Wind Instrument</string>
	<string name="NINJUTSU">Ninjutsu</string>
	<string name="SUMMONING">Summoning</string>
	<string name="BLUEMAGIC">Blue</string>
	<string name="GEOMANCERMAGIC">Geomancy</string>
	<string name="HANDBELL">Handbell</string>
	<string name="GUARDING">Guarding</string>
	<string name="EVASION">Evasion</string>
	<string name="SHIELD">Shield</string>
	<string name="PARRYING">Parrying</string>
	<string name="ENMITY">Enmity</string>
	<string name="CRITICAL">Crit hit rate</string>
	<string name="CRITICALDEFENCE">Enemy Crit hit rate</string>
	<string name="SPELLINTERRUPTION">Spell interruption</string>
	<string name="InstallDB">Update database</string>
	<string name="SDNotMounted">SD is not mounted.  Would you like to use internal storage?</string>
	<string name="YesAndRestart">Yes(then restart)</string>
	<string name="NoAndDismiss">No</string>
	<string name="UseExternalDBSucceeded">Setting changed.</string>
	<string name="UseExternalDBFailed">Setting change failed.</string>
	<string name="Filter">Filter…</string>
	<string name="ResetFilter">Reset filter</string>
	<string name="ApplyFilter">Apply</string>
	<string name="Skill">Edit skill…</string>
	<string name="Delete">Delete…</string>
	<string name="GoogleSearch">Search in Google</string>
   	<string-array name="SearchURIs">
		<item>http://www.google.com/search?ie=utf-8&amp;q=</item>
   	</string-array>
	<string name="Compare">Compare</string>
	<string name="NewCharacter">New character</string>
	<string name="Discard">Discard</string>
	<string name="JobSpecificMeritPointEdit">Job specific merits</string>
	<string name="Revert">Revert changed</string>
	<string name="useExternalDB">use SD for database storage</string>
	<string name="useEnglishDB">use English database</string>
	<string name="useJapaneseDB">use Japanese database</string>
	<string name="OrderByLevel">Reorder by Level</string>
	<string name="OrderByName">Reorder by Name</string>
	<string name="FilterByType">Filter by type</string>
	<string name="ResetFilterByType">Show all types</string>
	<string name="ShowStatusSeparate">Show base and additional value</string>
	<string name="ShowStatusTotal">Show total value</string>
	<string name="showCredit">Abount this application…</string>
	<string name="AtmaNotSelected">Atma not selected</string>
	<string name="VWAtmaNotSelected">Atma not selected</string>
	<string name="FoodNotSelected">no food selected</string>
	<string name="EquipmentNotSelected">no gear selected</string>
	<string name="EditAugment">Edit augment</string>
	<string name="SelectFromAugmentList">Agument list</string>
	<string name="SelectFromEquipmentList">Gear list</string>
	<string name="DeleteAugment">Delete…</string>
	<string name="QueryDeleteAugment">Are you sure to delete?</string>
	<string name="MagicNotSelected">not selected</string>
	<string name="BaseEquipmentNotFound">No base gear found in current DB.  Please select the base gear again.</string>
	<string name="EquipmentNotFound">No gear found in current DB.  Please select a gear again.</string>
	<string name="BackupToSD">Backup to SD</string>
	<string name="LinkOK">Link</string>
	<string name="Unlink">Unlink</string>
</resources>