<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/NewCharacter" android:title="@string/NewCharacter" android:icon="@android:drawable/ic_menu_add"></item>
    <item android:title="@string/Discard" android:icon="@android:drawable/ic_menu_revert" android:id="@+id/DiscardChanges"></item>
    <item android:id="@+id/Delete" android:icon="@android:drawable/ic_menu_delete" android:title="@string/Delete"></item>
    <item android:icon="@android:drawable/ic_menu_edit" android:id="@+id/EditMerits" android:title="@string/Merits"></item><item android:icon="@android:drawable/ic_menu_edit" android:id="@+id/EditSkill" android:title="@string/Skill"></item>
    <group android:id="@+id/group2" android:menuCategory="secondary">
    	<item android:icon="@android:drawable/ic_menu_manage" android:title="@string/InstallDB" android:id="@+id/InstallDB"></item>
    	<item android:id="@+id/InstallDBFromSD" android:title="@string/InstallDBFromSD" android:icon="@android:drawable/ic_menu_save"></item>
    	<item android:icon="@android:drawable/ic_menu_save" android:title="@string/ExportDBToSD" android:id="@+id/ExportDBToSD"></item>
    </group>
</menu>
