<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
	    <TableLayout android:id="@+id/tableLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:shrinkColumns="*">
	        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/HP" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/HP" android:entries="@array/Merits_HPMP_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/MP" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/MP" android:entries="@array/Merits_HPMP_Entries"></Spinner>
	        </TableRow>
	        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow" android:onClick="onSave">
	            <TextView android:id="@+id/textView" android:text="@string/STR" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/STR" android:entries="@array/Merits_Status_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/DEX" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/DEX" android:entries="@array/Merits_Status_Entries"></Spinner>
	        </TableRow>
	        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/VIT" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/VIT" android:entries="@array/Merits_Status_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/AGI" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/AGI" android:entries="@array/Merits_Status_Entries"></Spinner>
	        </TableRow>
	        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/INT" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/INT" android:entries="@array/Merits_Status_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/MND" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/MND" android:entries="@array/Merits_Status_Entries"></Spinner>
	        </TableRow>
	        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/CHR" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/CHR" android:entries="@array/Merits_Status_Entries"></Spinner>
	        </TableRow>
			<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/HANDTOHAND" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/HANDTOHAND" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/DAGGER" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/DAGGER" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/SWORD" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/SWORD" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/GREATSWORD" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/GREATSWORD" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/AXE" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/AXE" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/GREATAXE" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/GREATAXE" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/SCYTH" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/SCYTH" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/POLEARM" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/POLEARM" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/KATANA" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/KATANA" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/GREATKATANA" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/GREATKATANA" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/CLUB" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/CLUB" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/STAFF" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/STAFF" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/ARCHERY" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ARCHERY" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/MARKSMANSHIP" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/MARKSMANSHIP" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/THROWING" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/THROWING" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/GUARDING" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/GUARDING" android:entries="@array/Merits_Skill2_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/EVASION" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/EVASION" android:entries="@array/Merits_Skill2_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/SHIELD" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/SHIELD" android:entries="@array/Merits_Skill2_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/PARRYING" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/PARRYING" android:entries="@array/Merits_Skill2_Entries"></Spinner>
	        </TableRow>
	
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/DIVINEMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/DIVINEMAGIC" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/HEALINGMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/HEALINGMAGIC" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/ENCHANCINGMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ENCHANCINGMAGIC" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/ENFEEBLINGMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:entries="@array/Merits_Skill_Entries" android:id="@+id/ENFEEBLINGMAGIC"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/ELEMENTALMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ELEMENTALMAGIC" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/DARKMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/DARKMAGIC" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/SINGING" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/SINGING" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/STRINGINSTRUMENT" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/STRINGINSTRUMENT" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/WINDINSTRUMENT" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/WINDINSTRUMENT" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/NINJUTSU" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/NINJUTSU" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/SUMMONING" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/SUMMONING" android:entries="@array/Merits_Skill_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/BLUEMAGIC" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/BLUEMAGIC" android:entries="@array/Merits_Skill_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/ENMITY" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ENMITY" android:entries="@array/Merits_Enmity_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/CRITICAL" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/CRITICAL" android:entries="@array/Merits_Other_Entries"></Spinner>
	        </TableRow>
	    	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableRow">
	            <TextView android:id="@+id/textView" android:text="@string/CRITICALDEFENCE" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/CRITICALDEFENCE" android:entries="@array/Merits_Other_Entries"></Spinner>
	            <TextView android:id="@+id/textView" android:text="@string/SPELLINTERRUPTION" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	            <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/SPELLINTERRUPTION" android:entries="@array/Merits_Other_Entries"></Spinner>
	        </TableRow>
	    </TableLayout>
	</ScrollView>
</RelativeLayout>
